2001-11-04  Damien Sandras  <dsandras@seconix.com>

	* src/preferences.*: Changed the policy, the window is no more
	created / destroyed, but shown / hidden. Changed a lot of things
	to make the preferences window resizeable. 
	* src/main.cpp, src/main_interface.cpp: Made several changes to
	support the shown / hidden behavior.
	* src/ldap.cpp: Fixed bug when trying to browse while the specified
	server is an empty string.
	* src/menu.cpp, src/toolbar.cpp: Made several changes to
	support the shown / hidden behavior.	
	* src/video_grabber.cpp: Fixed bug: The preview button is sensitive
	again if the user is not in a call when the grabber is started.
	* src/cleaner.cpp: Added quit message in the statusbar and in the
	history.
	* src/callbacks.cpp: Made several changes to support the shown 
	/ hidden behavior. Made the about box size smalled. Added test to
	prevent that several threads cleaner are running at the same time.
	
2001-11-03  Damien Sandras  <dsandras@seconix.com>

	* src/common.h, src/config.cpp, src/preferences, 
	src/main_interfaces.cpp: Added support for the show_quickbar 
	widgets and options (to show or hide it). Fixed bug: Formerly, when 
	the user choosed to not show the main_notebook, it was shown, 
	then hidden. Now, it is hidden since the beginning. 
	
2001-10-29  Christian Rose  <menthos@menthos.com>

	* src/ldap.cpp: Changed some comments to C-style to work around some
	problems with older gettexts.

2001-10-28  Damien Sandras  <dsandras@seconix.com>

	* src/preferences.cpp: Added support for a callback function that
	disables Transmitted Video Quality, and Background Fill Settings
	if video bandwidth limitation is used (the reverse works too).
	Added support for "Enable Video Bandwidth Limitation" widget.
	* src/common.h: See above.
	* src/videograbber.cpp: Fixed bug with quickbar buttons.
	* src/endpoint.cpp: Fixed several bugs when beginning, ending, or
	answering calls. Added support for video bandwidth limitation if