@@ -1,5 +1,9 @@
 2001-11-04  Damien Sandras  <dsandras@seconix.com>
 
+	* src/endpoint.cpp: Readded support for bandwidth control.
+	
+2001-11-04  Damien Sandras  <dsandras@seconix.com>
+
 	* src/preferences.*: Changed the policy, the window is no more
 	created / destroyed, but shown / hidden. Changed a lot of things
 	to make the preferences window resizeable. 
